<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mujoco_cpp_pkg</name>
  <version>0.0.0</version>
  <description>MoveIt + MuJoCo ros2_control integration package</description>

  <maintainer email="joelviju2002@gmail.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- MoveIt -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_msgs</depend>

  <!-- Geometry / TF -->
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- ros2_control -->
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>control_toolbox</depend>
  <depend>joint_limits</depend>
  <depend>urdf</depend>

  <!-- MuJoCo -->
  <depend>mujoco</depend>

  <!-- (Optional) Gazebo bridge – safe to keep -->
  <depend>ros_gz_interfaces</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

 

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugin.xml"/>
  </export>

</package>
